Small UI bug #59063

Closed
opened 2018-12-09 10:54:10 +01:00 by Leonid · 7 comments

System Information
Operating system:
Kubuntu 18.04 LTS, x64 (nvidia-driver-390)
Graphics card:
NVIDIA GeForce GTX 1080

Blender Version
Broken:
2.80, e79bb957fc, blender2.8, 2018-12-09

Short description of error
The search menu loses its background under certain conditions. Just see a video below.
Exact steps for others to reproduce the error
https://youtu.be/jNMjWdw0Y7g

**System Information** Operating system: Kubuntu 18.04 LTS, x64 (nvidia-driver-390) Graphics card: NVIDIA GeForce GTX 1080 **Blender Version** Broken: 2.80, e79bb957fc3, blender2.8, 2018-12-09 **Short description of error** The search menu loses its background under certain conditions. Just see a video below. **Exact steps for others to reproduce the error** https://youtu.be/jNMjWdw0Y7g
Author

Added subscriber: @ljonya

Added subscriber: @ljonya
Member

Added subscriber: @CansecoGPC

Added subscriber: @CansecoGPC
Member

I could reproduce this bug happening too with Manjaro KDE, Plasma 5.14.4 with Nvidia GeForce GTX 750 Ti and 415.22 drivers.

I could reproduce this bug happening too with Manjaro KDE, Plasma 5.14.4 with Nvidia GeForce GTX 750 Ti and 415.22 drivers.
Member

Added subscriber: @oenvoyage

Added subscriber: @oenvoyage
Member

Reproduced on MacBook mid-2014 MacOS 10.13.6
Additionally it shows a vertical black bar:
Screen Shot 2018-12-09 at 22.12.48.png

Reproduced on MacBook mid-2014 MacOS 10.13.6 Additionally it shows a vertical black bar: ![Screen Shot 2018-12-09 at 22.12.48.png](https://archive.blender.org/developer/F5903244/Screen_Shot_2018-12-09_at_22.12.48.png)
Brecht Van Lommel was assigned by Sebastian Parborg 2018-12-14 19:18:21 +01:00

This issue was referenced by 26e0dc5d15

This issue was referenced by 26e0dc5d150c558946d6e2009cb1662b28c3fb82

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59063
No description provided.