Fix T59063: operator search menu loses background in some cases.